--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/Chart.min.css')
   body
     block content
+    block footer
+      script(src='/javascripts/Chart.min.js')
+      script(src='/javascripts/drawChart.js')
